--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/jeklly/" # the subpath of your site, e.g. /blog/
+baseurl: "/mynotes/" # the subpath of your site, e.g. /blog/
 url: ""# the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
